[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32io"
version = "0.1.0"
description = "A simple Python client for ESP32 IO protocol communication"
authors = [
    { name = "Mitsunori" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/esp32io"
Repository = "https://github.com/yourname/esp32io"

[tool.setuptools.packages.find]
where = ["."]